# treasure-boxes

./: .gitignore  .gitmodules  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: LinkChecker.yml  codeql-analysis.yml  codeql.yml
activation_actions/: README.md
activation_actions/filter_by_target_list/: README.md  README_ja.md  filter_by_target_list.dig
activation_actions/hashed_email/: README.md  README_ja.md  activation.sql  main.dig
data-box/digit_swap/: README.md  (+1 more)
gdpr/: README.md
id_unification/: README.md  assign_td_id.sql  create_tables.sql  drop_tables.sql  enrich_source_data.sql  extract_distinct_features.sql  id_unification.dig  log_this_step.sql  populate_unified_id_sets.sql  unify_loop.sql  unify_loop_heavy.sql
incremental_unique_values/: incremental_unique_values.dig
machine-learning/: README.md
machine-learning-box/: README.md
mail/: README.md  body.txt  send_email.dig
pg/: README.md  pg_example.dig
python-scripting/: README.md
realtime-box/: README.md
td_ddl/: README.md  ddl_operations.dig
td_load_example/: daily_load.dig
td_run/: README.md  run_saved_query.dig
tool-box/unification-validator/: README.md  __init__.py  cli.py  pyproject.toml  requirements.txt  sample_unify.yml  unification.yml  unification_fail.yml  validate.py  yaml_loader.py
tool-box/unification-validator/models/: __init__.py  canonical_id.py  master_table.py  master_table_attribute.py  master_table_attribute_source_column.py  persistent_id.py  relation_key.py  relation_key_column.py  relation_table.py  unification.py  utils.py
(+1689 files in other folders)
